@startuml heranca_associacao

title Diagrama de Classes - Agregacao

class Pessoa{
    - nome: String 
    - endereco: String
    + construtor(nome, endereco)
}

class Agencia{
    - numero_ag: Int
    - telefone: String
    - endereco: String
    + construtor(numero_ag, telefone, endereco)
}

class Categoria{
    - descricao: String
    - limite: Float
    - tipo: String
    + construtor(descricao, limite, tipo)
}

class ContaCorrente{
    - numero_cc: Int
    - saldo: Float
    - pessoa: Pessoa
    - agencia: Agencia
    - categoria: Categoria
    + construtor(numero_cc, saldo, pessoa, agencia, categoria)
}

ContaCorrente o-- Pessoa
ContaCorrente o-- Agencia
ContaCorrente o-- Categoria

@enduml